--- a/package.json
+++ b/package.json
@@ -15,12 +15,27 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "lint-staged": "lint-staged",
+    "stylelint-staged": "stylelint --syntax scss"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -34,5 +49,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.scss": "stylelint-staged"
+  },
+  "pre-commit": "lint-staged",
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "0.0.9",
+    "husky": "^7.0.4",
+    "jest-watch-typeahead": "^0.6.5",
+    "lint-staged": "^12.3.8",
+    "pre-commit": "^1.2.2",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
+    "source-map-explorer": "^2.5.2",
+    "webpack": "^5.72.0"
   }
 }
